--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ environment:
 ## -----------------------------------------------------------------------------
 
 dependencies:
+  collection: ">=1.19.0 < 2.0.0"
 
 ## -----------------------------------------------------------------------------
 
