--- a/.github/workflows/prepare.yml
+++ b/.github/workflows/prepare.yml
@@ -25,9 +25,9 @@ jobs:
   update-changelog:
     runs-on: ubuntu-latest
     steps:
-      - name: Update .github
-        run: git clone https://github.com/robmllze/pub.dev_package_workflow.git .github
-        
+      - name: Sync .github
+        run: rm -rf .github && git clone https://github.com/robmllze/pub.dev_package_workflow.git .github
+
       - name: Checkout code
         uses: actions/checkout@v3
 
