--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,5 +24,5 @@ on:
 jobs:
   publish:
     permissions:
-      id-token: write # test
+      id-token: write
     uses: dart-lang/setup-dart/.github/workflows/publish.yml@v1
